# edge-sentinel

./: .gitignore  AGENT-TASK.md  LICENSE  gradle.properties  gradlew  index.html  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.bp22intel.edgesentinel.data.local.EdgeSentinelDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  diag-helper.c
app/src/main/java/com/bp22intel/edgesentinel/: EdgeSentinelApp.kt  MainActivity.kt
app/src/main/java/com/bp22intel/edgesentinel/analysis/: AlertAnalysis.kt  FalsePositiveFilter.kt  LocationProfile.kt  ThreatAnalyst.kt
app/src/main/java/com/bp22intel/edgesentinel/baseline/: BaselineLearner.kt  BaselineManager.kt  BaselineScorer.kt  LocationBaseline.kt
app/src/main/java/com/bp22intel/edgesentinel/calibration/: CalibrationService.kt
app/src/main/java/com/bp22intel/edgesentinel/di/: AnalysisModule.kt  AppModule.kt  DetectionModule.kt  RepositoryModule.kt
app/src/main/java/com/bp22intel/edgesentinel/diag/: DiagBridge.kt  DiagMessageParser.kt  RootChecker.kt
app/src/main/java/com/bp22intel/edgesentinel/export/: AlertExporter.kt
app/src/main/java/com/bp22intel/edgesentinel/fusion/: FusionRule.kt  FusionRuleSet.kt  (+3 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: widget_threat_status.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  threat_status_widget_info.xml
gradle/: libs.versions.toml
(+168 files in other folders)
